<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/showAll"
        android:icon="@android:drawable/ic_menu_view"
        android:title="@string/show_all"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/about"
        android:icon="@android:drawable/ic_menu_help"
        android:title="@string/about"
        app:showAsAction="ifRoom" />

    <!--<item-->
        <!--android:id="@+id/loadPerson"-->
        <!--android:title="@string/load_person" />-->

    <!--<item-->
        <!--android:id="@+id/deleteTable"-->
        <!--android:title="@string/delete_table" />-->

</menu>
