<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.abdul.pieasdirectory.ShowPersonActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/person_image"
        android:scaleType="centerCrop"
        android:src="@drawable/pieas_directory_03" />

    <ImageView
        android:id="@+id/personImageView"
        android:layout_width="128dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/person_image"
        android:maxHeight="50dp"
        android:maxWidth="50dp"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toTopOf="@+id/officeLocationTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pieas_logo" />

    <TextView
        android:id="@+id/personNameEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/black_boundary"
        android:padding="4dp"
        android:text="@string/person_name"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/personImageView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/designationEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/black_boundary"
        android:padding="4dp"
        android:text="@string/designation"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/personImageView"
        app:layout_constraintTop_toBottomOf="@+id/personNameEditText" />

    <TextView
        android:id="@+id/postEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/black_boundary"
        android:padding="4dp"
        android:text="@string/post"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/personImageView"
        app:layout_constraintTop_toBottomOf="@+id/designationEditText" />

    <TextView
        android:id="@+id/departmentEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/black_boundary"
        android:padding="4dp"
        android:text="@string/department"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/personImageView"
        app:layout_constraintTop_toBottomOf="@+id/postEditText" />

    <TextView
        android:id="@+id/officeLocationEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/black_boundary"
        android:padding="4dp"
        android:text="@string/office_location"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/officeLocationTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/departmentEditText" />

    <TextView
        android:id="@+id/extensionEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/black_boundary"
        android:padding="4dp"
        android:text="@string/extension"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/extensionTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/officeLocationEditText" />

    <TextView
        android:id="@+id/phoneNoEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/black_boundary"
        android:padding="4dp"
        android:text="@string/phone_no"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/phoneNoTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/extensionEditText" />

    <TextView
        android:id="@+id/cellNoEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/black_boundary"
        android:padding="4dp"
        android:text="@string/cell_no"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/cellNoTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/phoneNoEditText" />

    <TextView
        android:id="@+id/emailEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/black_boundary"
        android:padding="4dp"
        android:text="@string/email"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/emailTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/cellNoEditText" />

    <Button
        android:id="@+id/callBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@android:color/holo_green_light"
        android:onClick="actionPerformed"
        android:text="@string/call"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/msgBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@android:color/holo_orange_light"
        android:onClick="actionPerformed"
        android:text="@string/message"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2" />

    <TextView
        android:id="@+id/officeLocationTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/black_boundary"
        android:gravity="end"
        android:padding="4dp"
        android:text="@string/office_location"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/officeLocationEditText"
        app:layout_constraintStart_toStartOf="@+id/personImageView"
        app:layout_constraintTop_toBottomOf="@+id/departmentEditText" />

    <TextView
        android:id="@+id/extensionTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/black_boundary"
        android:gravity="end"
        android:padding="4dp"
        android:text="@string/extension"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/extensionEditText"
        app:layout_constraintStart_toStartOf="@+id/officeLocationTextView"
        app:layout_constraintTop_toBottomOf="@+id/officeLocationTextView" />

    <TextView
        android:id="@+id/phoneNoTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/black_boundary"
        android:gravity="end"
        android:padding="4dp"
        android:text="@string/phone_no"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/phoneNoEditText"
        app:layout_constraintStart_toStartOf="@+id/extensionTextView"
        app:layout_constraintTop_toBottomOf="@+id/extensionTextView" />

    <TextView
        android:id="@+id/cellNoTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/black_boundary"
        android:gravity="end"
        android:padding="4dp"
        android:text="@string/cell_no"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/cellNoEditText"
        app:layout_constraintStart_toStartOf="@+id/phoneNoTextView"
        app:layout_constraintTop_toBottomOf="@+id/phoneNoTextView" />

    <TextView
        android:id="@+id/emailTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/black_boundary"
        android:gravity="end"
        android:padding="4dp"
        android:text="@string/email"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/emailEditText"
        app:layout_constraintStart_toStartOf="@+id/cellNoTextView"
        app:layout_constraintTop_toBottomOf="@+id/cellNoTextView" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="4dp"
        android:textSize="14sp"
        app:layout_constraintGuide_begin="192dp" />

</android.support.constraint.ConstraintLayout>
